--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
      "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "bulma": "^1.0.2",
@@ -31,5 +31,5 @@
     "globals": "^15.12.0",
     "vite": "^6.0.1"
   },
-  "homepage": "https://Joaquin3312.github.io/practice-todo"
+  "homepage": "https://Joaquin3312.github.io/finanzas"
 }
